Modernize netconf-server-mdsal
Use Path.of() instead of Paths.get() and similar conversions.

Change-Id: I490e0565973e0be7c165572cb9c2b983395bd8b0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>
(cherry picked from commit ec0b1f04fb1fec74af5e9fa15787a7bf8156588c)